# Unstructured-Take-Home

./: .gitignore  CLAUDE.md  Makefile  README.md  eval_results.csv  eval_summary.json  pyproject.toml
results/: eval_20260426_213235.csv  eval_20260426_213235.json  eval_20260426_213825.csv  eval_20260426_213825.json
scripts/: ingest.py  run_eval.py
src/: config.py  embedder.py
src/agent/: dspy_modules.py  graph.py  graph_react.py  image_store.py  nodes.py  react.py  state.py  tools.py
src/eval/: evaluate.py
src/ingest/: chunker.py  indexer.py  loader.py
src/retrieval/: reranker.py  retriever.py
